--- a/index.html
+++ b/index.html
@@ -211,14 +211,14 @@
   <div id="scroll-progress" aria-hidden="true"></div>
 
   <header>
-    <img src="https://cdn.dribbble.com/users/1816156/screenshots/3858687/hexagon_animated.gif" alt="Uday Singh Bhadauria" />
+    <img src="UDAY_S_BH.jpg" alt="Uday Singh Bhadauria" />
     <div class="info">
       <h1>Uday Singh Bhadauria</h1>
-      <p>Network Engineer | Cisco Certified Internetwork Expert (CCIE #70381)</p>
-      <p>8+ years experience in network, DevOps & automation, and full-stack development</p>
+      <p>Sr. Engineer | Business Analyst Certification from IIM-V | AI Specilization from Purdue University Online</p>
+      <p>15+ years experience in network, DevOps & automation</p>
       <p>
-        <a href="mailto:uday.bhadauria@example.com">uday.bhadauria@example.com</a> | 
-        <a href="tel:+919870498759">+91-9870498759</a>
+        <a href="mailto:bhadauria.uday@gmail.com">bhadauria.uday@gmail.com</a> | 
+        <a href="tel:+1-856-313-9691">+1-856-313-9691</a>
       </p>
       <a class="resume-btn" href="https://drive.google.com/file/d/1D2kgQ8iWREyAxHx__VbnfUP6Irdbkkn9/view?usp=share_link" target="_blank" rel="noopener noreferrer">Resume</a>
     </div>
