--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Uday Singh Bhadauria - Portfolio</title>
+  <!-- Link external CSS with versioning to force reload -->
+  <link rel="stylesheet" href="assets/styles.css?v=1.0.1" />
   <style>
     /* Reset & base styles */
     body {
