index file updated

--- a/index.html
+++ b/index.html
@@ -232,11 +232,12 @@
   <main>
     <section class="section projects" aria-label="Projects">
       <h2>Projects</h2>
-      <a href="https://github.com/udaybhadauria/InsightForge" target="_blank" rel="noopener noreferrer">InsightForge - AI Business Intelligence Assistant</a>
-      <a href="https://github.com/udaybhadauria/WeatherLogger" target="_blank" rel="noopener noreferrer">Weather Logger API (Flask)</a>
-      <a href="https://github.com/udaybhadauria/DevOpsMonitorStack" target="_blank" rel="noopener noreferrer">DevOps Monitoring Stack with Prometheus & Grafana</a>
-      <a href="https://github.com/udaybhadauria/Device_Telemetry_MQTT" target="_blank" rel="noopener noreferrer">Router Telemetry & SNMP PoC</a>
-      <a href="https://github.com/udaybhadauria/CI-CD-Pipeline-RPi" target="_blank" rel="noopener noreferrer">CI/CD Pipeline on Raspberry Pi with Jenkins</a>
+      <a href="https://github.com/udaybhadauria/AI-CSV-Files-Chatbot" target="_blank" rel="noopener noreferrer">AI Based CSV Files Chatbot Assistant</a>
+      <a href="https://github.com/udaybhadauria/HR_Chatbot" target="_blank" rel="noopener noreferrer">AI Based HR Chatbot Assistant</a>
+      <a href="https://github.com/udaybhadauria/flask-cicd" target="_blank" rel="noopener noreferrer">DevOps CI/CD Project (Flask/Jenkins/Docker/Slack)</a>
+      <a href="https://github.com/udaybhadauria/Device_Telemetry_MQTT" target="_blank" rel="noopener noreferrer">Router Telemetry Project (MQTT/Github Workflows/Docker/Slack/Postman)</a>
+      <a href="https://github.com/udaybhadauria/UnitTestProject" target="_blank" rel="noopener noreferrer">Unit Test Project using Flask API</a>
+      <a href="https://github.com/udaybhadauria/file_server" target="_blank" rel="noopener noreferrer">File Server Repository Project</a>
     </section>
 
     <section class="section">
