--- a/index.html
+++ b/index.html
@@ -217,12 +217,12 @@
     <div class="info">
       <h1>Uday Singh Bhadauria</h1>
       <p>Sr. Engineer | Business Analyst Certification from IIM-V | AI Specilization from Purdue University Online</p>
-      <p>15+ years experience in network, DevOps & automation</p>
+      <p>15+ years experience in Network, QA, DevOps & Automation</p>
       <p>
         <a href="mailto:bhadauria.uday@gmail.com">bhadauria.uday@gmail.com</a> | 
         <a href="tel:+1-856-313-9691">+1-856-313-9691</a>
       </p>
-      <a class="resume-btn" href="https://drive.google.com/file/d/1D2kgQ8iWREyAxHx__VbnfUP6Irdbkkn9/view?usp=share_link" target="_blank" rel="noopener noreferrer">Resume</a>
+      <a class="resume-btn" href="https://github.com/udaybhadauria/udaybhadauria.github.io/blob/main/assets/Uday_Bhadauria_Resume.pdf" target="_blank" rel="noopener noreferrer">Resume</a>
     </div>
     <button class="dark-mode-toggle" aria-label="Toggle dark mode" title="Toggle dark mode" type="button" aria-pressed="false">
       <span class="toggle-thumb"></span>
