index file updated again for resume path

--- a/index.html
+++ b/index.html
@@ -222,7 +222,13 @@
         <a href="mailto:bhadauria.uday@gmail.com">bhadauria.uday@gmail.com</a> | 
         <a href="tel:+1-856-313-9691">+1-856-313-9691</a>
       </p>
-      <a class="resume-btn" href="https://github.com/udaybhadauria/udaybhadauria.github.io/blob/main/assets/Uday_Bhadauria_Resume.pdf" target="_blank" rel="noopener noreferrer">Resume</a>
+      <a class="resume-btn" 
+   	href="https://raw.githubusercontent.com/udaybhadauria/udaybhadauria.github.io/blob/main/assets/Uday_Bhadauria_Resume.pdf" 
+   	target="_blank" 
+   	rel="noopener noreferrer">
+   	Resume
+      </a>
+      <!-- <a class="resume-btn" href="https://github.com/udaybhadauria/udaybhadauria.github.io/blob/main/assets/Uday_Bhadauria_Resume.pdf" target="_blank" rel="noopener noreferrer">Resume</a> -->
     </div>
     <button class="dark-mode-toggle" aria-label="Toggle dark mode" title="Toggle dark mode" type="button" aria-pressed="false">
       <span class="toggle-thumb"></span>
