--- a/index.html
+++ b/index.html
@@ -217,10 +217,10 @@
     <div class="info">
       <h1>Uday Singh Bhadauria</h1>
       <p>Sr. Engineer | Business Analyst Certification from IIM-V | AI Specilization from Purdue University Online</p>
-      <p>15+ years experience in Network, QA, DevOps & Automation</p>
+      <p>15+ years experience in QA, DevOps & Automation | Network Engineering</p>
       <p>
         <a href="mailto:bhadauria.uday@gmail.com">✉️ bhadauria.uday@gmail.com</a> | 
-        <a href="tel:+1-856-313-9691">📞 +1-856-313-9691</a>
+        <a href="tel:+1-856-313-9691">📞 +1-856-313-9691</a> | 
 	<a href="loc: Sunnyvale, CA">📍 Sunnyvale, CA</a>
       </p>
       <a class="resume-btn" 
